# notifico

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Containerfile  Dockerfile  README.md  db.sqlite3  docker-compose.yml  example.json  example2.json  notifico.toml  notifico.yml  pipeline.yml  pipelines.yml  regen_entities.sh
notifico-apiserver/: Cargo.toml
notifico-apiserver/admin/: index.html
notifico-apiserver/admin/assets/: index-D6mUgFKt.js  index-DqNaVsKT.js  index-sac5y8fm.js
notifico-apiserver/src/: amqp.rs  main.rs
notifico-apiserver/src/http/: ingest.rs  list_unsubscribe.rs  mod.rs  recipient.rs
notifico-app/: Cargo.toml
notifico-app/assets/: index.html
notifico-app/assets/assets/: index-DKhqOV6l.js  index-DL7kKpS3.js  index-NVGtdeUY.js  index.js  jsonMode.js  monaco_editor-RvQpGkV2.js  mui-BkgdmF8m.js  mui-DEK-1ii9.js
notifico-app/migration/: Cargo.toml
notifico-app/migration/src/: lib.rs  m20250108_000001_create_project_table.rs  m20250108_000002_create_pipeline_event.rs  m20250108_000002_create_table.rs  m20250108_000003_drop_channel.rs  m20250108_000003_recipient.rs  m20250121_000001_create_template_table.rs  m20250203_000001_create_apikey_table.rs
notifico-app/src/: amqp.rs  crud_table.rs  main.rs  pipeline_storage.rs  recipient.rs
notifico-app/src/controllers/: api_key.rs  event.rs  group.rs  mod.rs  pipeline.rs  project.rs  recipient.rs  subscription.rs  template.rs
notifico-app/src/entity/: api_key.rs  contact.rs  event.rs  group.rs  group_membership.rs  mod.rs  pipeline.rs  pipeline_event_j.rs  prelude.rs  project.rs  recipient.rs  recipient_group_j.rs  subscription.rs  template.rs
notifico-app/src/http/: auth.rs  ingest.rs  metrics.rs  mod.rs  public.rs
notifico-app/src/ingest/: http.rs
notifico-app/src/plugin/: mod.rs
notifico-core/: Cargo.toml
notifico-core/src/: channel.rs  contact.rs  credentials.rs  db.rs  engine.rs  error.rs  event.rs  http.rs  lib.rs  middleware.rs  pipeline.rs  queue.rs  recipient.rs  recorder.rs  registry.rs  simpletransport.rs  step.rs  templater.rs  transport.rs
notifico-core/src/config/: credentials.rs  mod.rs  pipelines.rs
notifico-core/src/credentials/: env.rs  memory.rs  mod.rs
notifico-core/src/engine/: core.rs  mod.rs  plugin.rs
notifico-core/src/http/: admin.rs  auth.rs  mod.rs
notifico-core/src/middleware/: click_tracking.rs  mod.rs  open_tracking.rs  plaintext_fallback.rs  unsubscribe_link.rs  utm_params.rs
notifico-core/src/pipeline/: context.rs  event.rs  executor.rs  mod.rs  runner.rs  storage.rs
notifico-core/src/recipient/: contact.rs  controller.rs  mod.rs
notifico-core/src/templater/: mod.rs  service.rs
notifico-core/src/transport/: discord.rs  email.rs  mod.rs  slack.rs  sms_twilio.rs  telegram.rs  webhook.rs
notifico-db/: Cargo.toml
notifico-db/src/: lib.rs
notifico-db/src/migration/: m20260303_000001_create_projects.rs  m20260303_000002_create_events.rs  m20260303_000003_create_templates.rs  m20260303_000004_create_recipients.rs  m20260303_000005_create_delivery_log.rs  m20260303_000006_create_api_keys.rs  m20260303_000007_create_idempotency.rs  m20260304_000008_create_delivery_task.rs  m20260304_000009_create_credentials.rs  m20260308_000010_create_pipeline_middleware.rs  m20260308_000011_add_rule_id_to_delivery_task.rs  m20260308_000012_create_tracking_event.rs  mod.rs
notifico-db/src/repo/: admin.rs  api_key.rs  credential.rs  delivery_log.rs  idempotency.rs  middleware.rs  mod.rs  preference.rs  queue.rs  recipient.rs  template.rs  tracking.rs
notifico-dbpipeline/: Cargo.toml
notifico-dbpipeline/migration/: Cargo.toml
notifico-dbpipeline/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241209_230024_drop_channel.rs
notifico-dbpipeline/src/: lib.rs
notifico-dbpipeline/src/controllers/: event.rs  pipeline.rs
notifico-dbpipeline/src/entity/: event.rs  mod.rs  pipeline.rs  pipeline_event_j.rs  prelude.rs
notifico-ingest/: Cargo.toml
notifico-ingest/src/: amqp.rs  http.rs  main.rs
notifico-ncenter/: Cargo.toml
notifico-ncenter/migration/: Cargo.toml
notifico-ncenter/migration/src/: lib.rs  m20220101_000001_create_table.rs
notifico-ncenter/src/: http.rs  lib.rs
notifico-ncenter/src/entity/: mod.rs  prelude.rs  (+1 more)
notifico-project/: Cargo.toml
notifico-project/migration/: Cargo.toml
notifico-project/src/: lib.rs
notifico-server/: Cargo.toml
notifico-server/src/: admin.rs  auth.rs  broadcast.rs  config.rs  frontend.rs  ingest.rs  main.rs  metrics.rs  openapi.rs  public.rs  rate_limit.rs  tracking.rs  worker.rs
notifico-smpp/: Cargo.toml
notifico-smpp/src/: lib.rs
notifico-subscription/: Cargo.toml
notifico-subscription/migration/: Cargo.toml
notifico-subscription/src/: context.rs  http.rs  lib.rs  plugins.rs  recipient.rs  recipient_controller.rs  step.rs
notifico-telegram/: Cargo.toml
notifico-telegram/src/: contact.rs  context.rs  lib.rs  step.rs
notifico-template/: Cargo.toml
notifico-template/migration/: Cargo.toml
notifico-template/src/: descriptor.rs  error.rs  lib.rs  source.rs
notifico-templater/: Cargo.toml
notifico-templater/src/: lib.rs
notifico-transports/: Cargo.toml
notifico-transports/src/: lib.rs
notifico-userapi/: Cargo.toml
notifico-userapi/src/: main.rs
notifico-web/: Cargo.toml
notifico-web/assets/: index.html
notifico-web/src/: main.rs
notifico-whatsapp/: Cargo.toml
notifico-whatsapp/src/: cloudapi.rs  context.rs  credentials.rs  lib.rs  step.rs
notifico-worker/: Cargo.toml
notifico-worker/src/: amqp.rs  main.rs
notificox/: Cargo.toml
notificox/src/: event_emitter.rs  lib.rs  main.rs  message.rs  plugin.rs  plugin_registry.rs  schemas.rs  trigger_event_emitter.rs  trigger_service.rs  workflow.rs  workflow_executor.rs
transports/discord/: Cargo.toml
transports/fcm/: Cargo.toml
transports/notifico-ntfy/: Cargo.toml
transports/notifico-slack/: Cargo.toml
transports/notifico-smpp/: Cargo.toml
transports/notifico-smtp/: Cargo.toml
transports/notifico-telegram/: Cargo.toml
transports/notifico-whatsapp/: Cargo.toml
(+249 files in other folders)
