[workspace]
resolver = "2"
members = [
    "notifico-core",
    "notifico-db",
    "notifico-template",
    "notifico-queue",
    "notifico-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/notificohq/notifico"

[workspace.dependencies]
# Core
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.21", features = ["v7", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Web
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
http-body-util = "0.1"

# Database
sea-orm = { version = "2.0.0-rc.35", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "2.0.0-rc.35"

# Config
toml = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }

# Template
minijinja = { version = "2.16", features = ["builtins"] }

# Crypto
sha2 = "0.10"

# Internal crates
notifico-core = { path = "notifico-core" }
notifico-db = { path = "notifico-db" }
notifico-template = { path = "notifico-template" }
notifico-queue = { path = "notifico-queue" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
