[workspace]
resolver = "2"
members = [
    "notifico-core",
    "notifico-db",
    "notifico-template",
    "notifico-queue",
    "notifico-server",
    "transports/console",
    "transports/email",
    "transports/telegram",
    "transports/slack",
    "transports/discord",
    "transports/twilio-sms",
    "transports/webhook",
    "transports/fcm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/notificohq/notifico"

[workspace.dependencies]
# Core
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.21", features = ["v7", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Web
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
http-body-util = "0.1"
utoipa = { version = "5.3", features = ["axum_extras", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }

# Database
sea-orm = { version = "2.0.0-rc.35", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "2.0.0-rc.35"

# Config
toml = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }

# Template
minijinja = { version = "2.16", features = ["builtins"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# OpenTelemetry
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.30"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Frontend embedding
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"

# Crypto
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.9"
hex = "0.4"
regex = "1.11"

# Text processing
html2text = "0.14"

# Internal crates
notifico-core = { path = "notifico-core" }
notifico-db = { path = "notifico-db" }
notifico-template = { path = "notifico-template" }
notifico-queue = { path = "notifico-queue" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
