[package]
name = "notifico-apiserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["macros", "rt", "sync", "rt-multi-thread", "signal"] }
futures = "0.3.31"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
serde = { version = "1.0.210", features = ["derive"] }
uuid = { version = "1.11.0", features = ["serde", "v7"] }
serde_json = "1.0.130"
async-trait = "0.1.83"
figment = { version = "0.10.19", features = ["yaml", "env", "toml"] }
clap = { version = "4.5.20", features = ["derive", "color", "usage"] }
fe2o3-amqp = "0.13.1"
axum = { workspace = true }
sea-orm = { workspace = true }

notifico-core = { path = "../notifico-core" }
notifico-subscription = { path = "../notifico-subscription" }
