[package]
name = "notifico-apiserver"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../notifico-core" }
notifico-subscription = { path = "../notifico-subscription" }
notifico-dbpipeline = { path = "../notifico-dbpipeline" }
notifico-project = { path = "../notifico-project" }

anyhow = "1.0.93"
async-trait = "0.1.83"
axum = { workspace = true }
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { version = "4.5.20", features = ["derive", "color", "usage", "env"] }
dotenvy = "0.15.7"
fe2o3-amqp = "0.13.1"
futures = "0.3.31"
sea-orm = { workspace = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.130"
tokio = { version = "1.41", features = ["macros", "rt", "sync", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
url = { version = "2.5.3", features = ["serde"] }
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
uuid = { version = "1.11.0", features = ["serde", "v7"] }
