[package]
name = "notifico-app"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../notifico-core" }
notifico-transports = { path = "../notifico-transports" }

notifico-template = { path = "../notifico-template" }
notifico-subscription = { path = "../notifico-subscription" }
notifico-dbpipeline = { path = "../notifico-dbpipeline" }
notifico-project = { path = "../notifico-project" }

anyhow = "1.0.94"
async-trait = "0.1.83"
axum = { workspace = true }
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { workspace = true }
dotenvy = "0.15.7"
fe2o3-amqp = { version = "0.13.1" }
flume = "0.11.1"
jsonwebtoken = "9.3.0"
log = "0.4.22"
rust-embed = { version = "8.5.0", features = ["mime-guess"] }
sea-orm = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42", features = ["macros", "rt", "sync", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = { workspace = true }
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "8", features = ["axum", "vendored"] }
uuid = { workspace = true }
