[package]
name = "notifico-app"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../notifico-core" }
notifico-transports = { path = "../notifico-transports" }

notifico-template = { path = "../notifico-template" }
notifico-attachment = { path = "../notifico-attachment" }

notifico-migration = { path = "migration" }

anyhow = "1.0.95"
async-trait = "0.1.84"
axum = { workspace = true }
axum-extra = { workspace = true }
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { workspace = true }
dotenvy = "0.15.7"
fe2o3-amqp = { version = "0.13.1" }
flume = "0.11.1"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
log = "0.4.22"
rust-embed = { version = "8.5.0", features = ["mime-guess"] }
sea-orm = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.11"
tokio = { workspace = true }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
multimap = "0.10.0"
