[package]
name = "notifico-app"
version = "0.1.0"
edition = "2024"

[dependencies]
notifico-core = { path = "../notifico-core" }

notifico-template = { path = "../notifico-template" }

notifico-migration = { path = "migration" }

anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { workspace = true }
axum-extra = { workspace = true }
axum-prometheus = "0.8.0"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.40"
clap = { workspace = true }
dotenvy = "0.15.7"
fe2o3-amqp = { version = "0.13.1" }
flume = "0.11.1"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
metrics = { workspace = true }
moka = { version = "0.12.10", features = ["future"] }
multimap = "0.10.0"
rust-embed = { version = "8.7.0", features = ["mime-guess"] }
sea-orm = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { workspace = true }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
