[package]
name = "notifico-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
lettre = { workspace = true }
reqwest = { workspace = true }
notifico-template = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
