[package]
name = "notifico-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
lettre = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
html2text = { workspace = true }
notifico-template = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
