[package]
name = "notifico-dbpipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../notifico-core" }
notifico-dbpipeline-migration = { path = "migration" }

sea-orm = { workspace = true }
async-trait = "0.1.83"
serde = "1.0.215"
serde_json = "1.0.133"
anyhow = "1.0.95"
