[package]
name = "notifico-dbpipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../notifico-core" }
notifico-dbpipeline-migration = { path = "migration" }

sea-orm = { workspace = true }
async-trait = "0.1.85"
serde = "1.0.217"
serde_json = "1.0.134"
anyhow = "1.0.95"
utoipa = { workspace = true }
