[package]
name = "notifico-ncenter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
serde = { version = "1.0.210", features = ["derive"] }
sea-orm = { workspace = true }
async-trait = "0.1.83"
uuid = { version = "1.10.0", features = ["v7"] }
chrono = "0.4.38"
serde_json = "1.0.128"
anyhow = "1.0.89"

notifico-core = { path = "../notifico-core" }
notifico-ncenter-migration = { path = "migration" }
