[package]
name = "notifico-project"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-project-migration = { path = "migration" }
notifico-core = { path = "../notifico-core" }

sea-orm = { workspace = true }
uuid = { version = "1.11.0", features = ["v7"] }
serde = { version = "1.0.215", features = ["derive"] }
