[package]
name = "notifico-project"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-project-migration = { path = "migration" }
notifico-core = { path = "../notifico-core" }

sea-orm = { workspace = true }
uuid = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }
async-trait = "0.1.83"
