[package]
name = "notifico-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "notifico"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
notifico-core = { workspace = true }
notifico-db = { workspace = true }
