[package]
name = "notifico-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "notifico"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
notifico-core = { workspace = true }
notifico-db = { workspace = true }
notifico-queue = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
