[package]
name = "notifico-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "notifico"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
notifico-core = { workspace = true }
notifico-db = { workspace = true }
notifico-queue = { workspace = true }
notifico-template = { workspace = true }
notifico-transport-console = { path = "../transports/console" }
notifico-transport-email = { path = "../transports/email" }
notifico-transport-telegram = { path = "../transports/telegram" }
notifico-transport-slack = { path = "../transports/slack" }
notifico-transport-discord = { path = "../transports/discord" }
notifico-transport-twilio-sms = { path = "../transports/twilio-sms" }
notifico-transport-webhook = { path = "../transports/webhook" }
notifico-transport-fcm = { path = "../transports/fcm" }
notifico-transport-apns = { path = "../transports/apns" }
uuid = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
