[package]
name = "notifico-subscription"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../notifico-core" }
notifico-subcription-migration = { path = "migration" }

url = "2.5.4"
uuid = { workspace = true }
serde_json = "1.0.133"
sea-orm = { workspace = true }
tracing = "0.1.41"
serde = { version = "1.0.215", features = ["derive"] }
axum = { workspace = true }
jsonwebtoken = "9.3.0"
anyhow = "1.0.93"

