[package]
name = "notifico-subscription"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../notifico-core" }
notifico-subcription-migration = { path = "migration" }

url = { workspace = true }
uuid = { workspace = true }
serde_json = "1.0.133"
sea-orm = { workspace = true }
tracing = "0.1.41"
serde = { version = "1.0.215", features = ["derive"] }
jsonwebtoken = "9.3.0"
anyhow = "1.0.94"
async-trait = "0.1.83"
