[package]
name = "notifico-template"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../notifico-core" }
minijinja = { version = "2.7.0", default-features = false, features = ["builtins", "unicode", "serde", "debug", "urlencode", "speedups"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
async-trait = "0.1.84"
tracing = "0.1.41"
uuid = { workspace = true }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["fs"] }
toml = "0.8.19"
anyhow = "1.0.95"
utoipa = "5.3.1"
