[package]
name = "notifico-template"
version = "0.1.0"
edition = "2024"

[dependencies]
notifico-core = { path = "../notifico-core" }
minijinja = { version = "2.7.0", default-features = false, features = ["builtins", "unicode", "serde", "debug", "urlencode", "speedups"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
async-trait = "0.1.86"
tracing = "0.1.41"
uuid = { workspace = true }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["fs"] }
toml = "0.8.20"
anyhow = "1.0.96"
utoipa = "5.3.1"
