[package]
name = "notifico-template"
version = "0.1.0"
edition = "2024"

[dependencies]
notifico-core = { path = "../notifico-core" }
minijinja = { version = "2.9.0", default-features = false, features = ["builtins", "unicode", "serde", "debug", "urlencode", "speedups"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1.88"
tracing = "0.1.41"
uuid = { workspace = true }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["fs"] }
toml = "0.8.21"
anyhow = "1.0.98"
utoipa = "5.3.1"
