[package]
name = "notifico-templater"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../notifico-core" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ["v4"] }
reqwest-middleware = { version = "0.3.3", features = ["json"] }
reqwest-tracing = "0.5.3"
url = "2.5.2"
async-trait = "0.1.82"