[package]
name = "notifico-transports"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../notifico-core" }
# Transports
notifico-telegram = { path = "../transports/notifico-telegram" }
notifico-smtp = { path = "../transports/notifico-smtp" }
notifico-whatsapp = { path = "../transports/notifico-whatsapp" }
notifico-smpp = { path = "../transports/notifico-smpp" }
notifico-slack = { path = "../transports/notifico-slack" }
notifico-pushover = { path = "../transports/notifico-pushover" }
notifico-gotify = { path = "../transports/notifico-gotify" }

reqwest = { workspace = true }