[package]
name = "notifico-transports"
version = "0.1.0"
edition = "2024"

[dependencies]
notifico-core = { path = "../notifico-core" }
notifico-attachment = { path = "../notifico-attachment" }
# Transports
notifico-telegram = { path = "../transports/notifico-telegram" }
notifico-smtp = { path = "../transports/notifico-smtp" }
notifico-whatsapp = { path = "../transports/notifico-whatsapp" }
notifico-smpp = { path = "../transports/notifico-smpp" }
notifico-slack = { path = "../transports/notifico-slack" }
notifico-pushover = { path = "../transports/notifico-pushover" }
notifico-gotify = { path = "../transports/notifico-gotify" }
notifico-ntfy = { path = "../transports/notifico-ntfy" }
notifico-noop = { path = "../transports/notifico-noop" }

reqwest = { workspace = true }