[package]
name = "notifico-userapi"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../notifico-core" }
notifico-subscription = { path = "../notifico-subscription" }

axum = { workspace = true }
clap = { workspace = true }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
log = "0.4.22"
sea-orm = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42", features = ["macros", "rt", "sync", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = { workspace = true }
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
uuid = { workspace = true }
