[package]
name = "notifico-web"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../notifico-core" }
notifico-subscription = { path = "../notifico-subscription" }
notifico-dbpipeline = { path = "../notifico-dbpipeline" }
notifico-project = { path = "../notifico-project" }
notifico-template = { path = "../notifico-template" }

axum = { workspace = true }
clap = { workspace = true }
dotenvy = "0.15.7"
log = "0.4.22"
rust-embed = { version = "8.5.0", features = ["mime-guess"] }
sea-orm = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42", features = ["macros", "rt", "sync", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = { workspace = true }
uuid = { workspace = true }
