[package]
name = "notifico-whatsapp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
notifico-core = { path = "../notifico-core" }
uuid = { version = "1.10.0", features = ["v4"] }
serde_json = "1.0.128"
async-trait = "0.1.82"
reqwest = { workspace = true }
tracing = "0.1.40"
