[package]
name = "notifico-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../notifico-core" }
notifico-telegram = { path = "../transports/notifico-telegram" }
notifico-smtp = { path = "../transports/notifico-smtp" }
notifico-whatsapp = { path = "../transports/notifico-whatsapp" }
notifico-smpp = { path = "../transports/notifico-smpp" }
notifico-slack = { path = "../transports/notifico-slack" }
notifico-pushover = { path = "../transports/notifico-pushover" }

notifico-template = { path = "../notifico-template" }
notifico-subscription = { path = "../notifico-subscription" }
notifico-dbpipeline = { path = "../notifico-dbpipeline" }

anyhow = "1.0.94"
async-trait = "0.1.83"
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { workspace = true }
dotenvy = "0.15.7"
fe2o3-amqp = { version = "0.13.1" }
figment = { version = "0.10.19", features = ["env", "toml"] }
flume = "0.11.1"
futures = "0.3.31"
ractor = "0.13.2"
sea-orm = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42", features = ["macros", "rt", "sync", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = "2.5.4"
uuid = { workspace = true }
log = "0.4.22"

[features]
default = []
