[package]
name = "notifico-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../notifico-core" }
notifico-transports = { path = "../notifico-transports" }

notifico-template = { path = "../notifico-template" }
notifico-subscription = { path = "../notifico-subscription" }
notifico-dbpipeline = { path = "../notifico-dbpipeline" }

anyhow = "1.0.94"
async-trait = "0.1.83"
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { workspace = true }
dotenvy = "0.15.7"
fe2o3-amqp = { version = "0.13.1" }
figment = { version = "0.10.19", features = ["env", "toml"] }
sea-orm = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42", features = ["macros", "rt", "sync", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = "2.5.4"
log = "0.4.22"

[features]
default = []
