[package]
name = "notificox"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../notifico-core" }
notifico-template = { path = "../notifico-template" }
notifico-transports = { path = "../notifico-transports" }
notifico-attachment = { path = "../notifico-attachment" }
# Other deps
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134", features = ["preserve_order"] }
tokio = { workspace = true }
clap = { workspace = true }
json5 = "0.4.1"
flume = "0.11.1"
dotenvy = "0.15.7"
uuid = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
