[package]
name = "notificox"
version = "0.1.0"
edition = "2024"

[dependencies]
notifico-core = { path = "../notifico-core" }
# Other deps
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokio = { workspace = true }
clap = { workspace = true }
json5 = "0.4.1"
flume = "0.11.1"
dotenvy = "0.15.7"
uuid = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
