[package]
name = "notificox"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { workspace = true }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
async-trait = { workspace = true }
slab = "0.4.9"
flume = "0.11"
futures = "0.3"
