[package]
name = "notifico-project-migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
uuid = "1.11.0"
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }