[package]
name = "notifico-ntfy"
version = "0.1.0"
edition = "2021"

[dependencies]
notifico-core = { path = "../../notifico-core" }
notifico-attachment = { path = "../../notifico-attachment" }
reqwest = { workspace = true }
url = { workspace = true }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.134"
async-trait = "0.1.83"
base64 = "0.22.1"
