[package]
name = "notifico-slack"
version = "0.1.0"
edition = "2024"

[dependencies]
notifico-core = { path = "../../notifico-core" }
notifico-attachment = { path = "../../notifico-attachment" }

reqwest = { workspace = true }
serde = "1.0.219"
async-trait = "0.1.88"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["fs"] }
tokio-util = "0.7.15"
url = { workspace = true }
serde_urlencoded = "0.7.1"
