[package]
name = "notifico-smpp"
version = "0.1.0"
edition = "2021"

[dependencies]
rusmpp = { version = "0.1.3", features = ["tokio-codec", "tracing"] }
tokio = { version = "1.41.1", features = ["net"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tracing = "0.1.41"

notifico-core = { path = "../../notifico-core" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
async-trait = "0.1.83"
futures-util = "0.3.31"
url = "2.5.4"
