[package]
name = "notifico-smpp"
version = "0.1.0"
edition = "2021"

[dependencies]
rusmpp = { version = "0.1.3", features = ["tokio-codec", "tracing"] }
tokio = { version = "1.42.0", features = ["net"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tracing = "0.1.41"

notifico-core = { path = "../../notifico-core" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
async-trait = "0.1.84"
futures-util = "0.3.31"
url = "2.5.4"
