[package]
name = "notifico-smpp"
version = "0.1.0"
edition = "2024"

[dependencies]
rusmpp = { version = "0.1.3", features = ["tokio-codec", "tracing"] }
tokio = { version = "1.44.2", features = ["net"] }
tokio-util = { version = "0.7.15", features = ["full"] }
tracing = "0.1.41"

notifico-core = { path = "../../notifico-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1.88"
futures-util = "0.3.31"
url = "2.5.4"
