[package]
name = "notifico-smtp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
serde_json = "1.0.133"
tracing = "0.1.40"
lettre = { version = "0.11.10", default-features = false, features = [
    "smtp-transport", "pool", "hostname", "builder",
    "serde", "tokio1-native-tls", "tracing"
] }
serde = { version = "1.0.215", features = ["derive"] }
uuid = { version = "1.11.0", features = ["serde"] }
url = "2.5.3"
moka = { version = "0.12.8", features = ["future"] }

notifico-core = { path = "../../notifico-core" }
anyhow = "1.0.93"
