[package]
name = "notifico-smtp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.84"
serde_json = "1.0.138"
tracing = "0.1.41"
lettre = { version = "0.11.11", default-features = false, features = [
    "smtp-transport", "pool", "hostname", "builder",
    "serde", "tokio1-native-tls", "tracing"
] }
serde = { version = "1.0.217", features = ["derive"] }
uuid = { workspace = true }
url = "2.5.4"
moka = { version = "0.12.9", features = ["future"] }
mime = "0.3.17"

notifico-core = { path = "../../notifico-core" }
notifico-attachment = { path = "../../notifico-attachment" }
